# bongo-cat-next

./: .gitignore  README.md  README_zh.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml  test-build.yml
apps/desktop/: next.config.ts
docs/: agent.md
scripts/: bump-version.mjs  release.sh
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/models/destroy/: destroy.model3.json
src-tauri/assets/models/naximofu_2/: naximofu_2.model3.json
src-tauri/assets/models/normal/: normal.model3.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  lib.rs
src-tauri/src/core/: device.rs  mod.rs
src-tauri/src/core/setup/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/utils/: mod.rs
src/app/: layout.tsx  page.tsx
src/components/: CatViewer.tsx  KeyboardVisualization.tsx  Live2DViewer.tsx  Logo.tsx  RoundedButton.tsx  cat-viewer.tsx  expression-selector.tsx  keyboard-visualization.tsx  logo.tsx  motion-selector.tsx
src/constants/: index.ts
src/data/: modelConfig.ts
src/hooks/: use-i18n.ts  use-keyboard.ts  use-live2d-system.ts  use-menu-builder.ts  use-menu-factory.ts  use-shared-menu.ts  use-tray.ts  use-window-effects.ts  use-window-scaling.ts  use-window.ts  useDevice.ts  useDeviceEvents.ts  useKeyboard.ts  useLive2D.ts  useLive2DSystem.ts  useModel.ts  useMouse.ts  useSharedMenu.ts  useTray.ts  useWindowResize.ts  useWindowState.ts
src/i18n/: index.ts
(+64 files in other folders)
